<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="title">My Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>

    <string name="project1">Spotify Streamer</string>
    <string name="project2">Football Scores App</string>
    <string name="project3">Library App</string>
    <string name="project4">Build It Bigger</string>
    <string name="project5">XYZ Reader</string>
    <string name="project6">Capstone</string>

    <string name="app_click">This button will launch my %1$s app</string>
</resources>
