<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/title" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="8dp"
        android:textSize="24sp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        >
        <Button
            android:id="@+id/button_project1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/project1"
            style="?android:attr/borderlessButtonStyle"
            android:background="@color/primary"
            android:layout_margin="8dp"
            android:padding="8dp"
            />
        <Button
            android:id="@+id/button_project2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/project2"
            style="?android:attr/borderlessButtonStyle"
            android:background="@color/primary"
            android:layout_margin="8dp"
            android:padding="8dp"
            />
        <Button
            android:id="@+id/button_project3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/project3"
            style="?android:attr/borderlessButtonStyle"
            android:background="@color/primary"
            android:layout_margin="8dp"
            android:padding="8dp"
            />
        <Button
            android:id="@+id/button_project4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/project4"
            style="?android:attr/borderlessButtonStyle"
            android:background="@color/primary"
            android:layout_margin="8dp"
            android:padding="8dp"
            />
        <Button
            android:id="@+id/button_project5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/project5"
            style="?android:attr/borderlessButtonStyle"
            android:background="@color/primary"
            android:layout_margin="8dp"
            android:padding="8dp"
            />
        <Button
            android:id="@+id/button_project6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/project6"
            style="?android:attr/borderlessButtonStyle"
            android:background="@color/colorAccent"
            android:layout_margin="8dp"
            android:padding="8dp"
            />
    </LinearLayout>


</RelativeLayout>
